# ImagePrinter

./: CMakeLists.txt  README.md
.github/workflows/: arch.yml  build-check.yml  ubuntu.yml
include/: color.h  image.h  printer.h  terminal.h
src/: color.cpp  image.cpp  main.cpp  printer.cpp  terminal.cpp
